# 36_bootloader

./: README.md  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ES8388/: es8388.c
components/BSP/I2S/: i2s.c  i2s.h
components/BSP/UART_AUDIO/: mp3_decoder.c  mp3_decoder.h  uart_audio.c  uart_audio.c.bak  uart_audio.h
main/: CMakeLists.txt  idf_component.yml  main.c
tools/: audio_tool.py
